[project]
name = "knowledge-base-qa-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.138.2",
    "grandalf>=0.8",
    "langchain>=1.3.11",
    "langchain-community>=0.4.2",
    "langchain-openai>=1.3.3",
    "langgraph>=1.2.7",
    "loguru>=0.7.3",
    "numpy>=2.4.6",
    "python-dotenv>=1.2.2",
]
