[project]
name = "knowledge-base-qa-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.138.2",
    "flagembedding>=1.4.0",
    "grandalf>=0.8",
    "langchain>=1.3.11",
    "langchain-community>=0.4.2",
    "langchain-openai>=1.3.3",
    "langgraph>=1.2.7",
    "loguru>=0.7.3",
    "magic-pdf>=1.3.12",
    "minio>=7.2.20",
    "modelscope>=1.37.1",
    "numpy>=2.4.6",
    "pandas>=3.0.3",
    "pymilvus>=3.0.0",
    "pymilvus-model>=0.3.2",
    "pymongo>=4.17.0",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.32",
    "regex>=2026.6.28",
    "uvicorn>=0.49.0",
]
